--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^1.6.0"
   }
