--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,9 +29,11 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@felte/validator-yup": "^1.0.1",
     "axios": "^0.26.1",
     "felte": "^1.0.1",
     "sirv-cli": "^2.0.0",
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "yup": "^0.32.11"
   }
 }
